code clean up + playerAnimator format improvements